# the-tribunal

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
backend/: .dockerignore  .env.example  .railwayignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 02ad3fc109e7_add_quote_public_token.py  03876dc32a6c_add_offers_table_and_campaign_offer_id.py  05ee4fe87849_add_recurring_job_templates.py  1963647ee64e_merge_multiple_alembic_heads.py  19b65a947e47_add_guarantee_tracking.py  20260519_approval_pending_actions_nullable_agent.py  20260519_outbound_compliance_controls.py  20260520_mac_relay_sender_fields.py  20260520_merge_post_assistant_heads.py  20260521_add_outbound_missions_and_lead_miner.py  20260601_drop_legacy_contact_tags_array.py  20260609_add_phone_messages.py  20260611_bookable_staff.py  21019f8d527d_add_quote_deposit.py  32440f2a725e_add_workspace_invitations.py  46afccc11055_add_job_time_entries_expenses_and_job_.py  4bf62e766596_add_invoices.py  5aca94c46ae6_add_comparison_per_ft_override.py  5acb1b941277_add_catalog_items_price_book.py  630aea148e30_add_quotes_and_quote_line_items.py  79a0808ae761_add_human_profile_knowledge_docs_.py  7bafc8edd369_add_speed_to_lead_first_response_.py  7c1e9a4b2f30_add_recurring_occurrence_unique_index.py  7c5a23b17a86_add_comparison_selected_package.py  8d5dbe66cc0d_add_fk_on_segment_workspace_id.py  99e23f6b89ef_add_contact_id_to_roofline_comparisons.py  9a01178f7789_conversations_contact_id_cascade.py  a0b1c2d3e4f5_add_automation_executions.py  a9b0c1d2e3f5_sms_link_tracking.py  aaf6a29ff703_add_user_settings_fields.py  add_automations_001_add_automations_table.py  b0c1d2e3f4g5_add_push_preference_columns.py  b1c2d3e4f5a6_add_offer_builder_and_lead_magnets.py  b2c3d4e5f6g7_add_appointment_message_id.py  b35dc15658d3_add_comparison_christmas_per_ft_override.py  b3d8f1a2c4e5_add_external_ids_to_field_service.py  b4819c8748a9_merge_four_heads_assistant_.py  b5c6d7e8f9a0_add_assistant_conversations_updated_at.py  b8b15c8633c6_add_external_ids_to_contacts_service_.py  bb1c2d3e4f5a_add_fk_indexes.py  (+38 more)
backend/app/: main.py
backend/app/api/: crud.py  deps.py  redirects.py
backend/app/constants/: text_response_timing.py
backend/app/core/: circuit_breakers.py  config.py  encryption.py  logging.py  metrics.py  origin_validation.py  permissions.py  rate_limit_helpers.py  request_id.py  security.py  telemetry.py  webhook_security.py
backend/app/db/: base.py  list_helpers.py  pagination.py  redis.py  scope.py  seed.py  session.py
backend/app/models/: __init__.py  ad_advertiser.py  ad_creative.py  agent.py  api_key.py  appointment.py  assistant_conversation.py  auth_rate_limit.py  automation.py  automation_execution.py  bandit_decision.py  bookable_staff.py  call_feedback.py  call_outcome.py  campaign.py  campaign_number_pool.py  campaign_report.py  catalog.py  contact.py  contact_attachment.py  conversation.py  demo_request.py  device_token.py  drip_campaign.py  email_event.py  field_service.py  human_nudge.py  human_profile.py  improvement_suggestion.py  invitation.py  invoice.py  job_costing.py  knowledge_document.py  lead_discovery_job.py  lead_magnet.py  lead_magnet_lead.py  lead_prospect.py  lead_source.py  message_template.py  message_test.py  (+23 more)
backend/app/schemas/: __init__.py  ad_advertiser.py  ad_creative.py  ad_library.py  agent.py  automation.py  bookable_staff.py  call.py  campaign.py  catalog.py  companycam.py  contact.py  contact_attachment.py  crm_assistant.py  dashboard.py  deal_coach.py  embed.py  estimate.py  field_service.py  find_leads_ai.py  integration.py  invoice.py  job.py  job_costing.py  lead_discovery_job.py  lead_prospect.py  lead_source.py  nudge.py  offer.py  onboarding.py  opportunity.py  outbound_mission.py  outbound_sequence.py  pending_action.py  phone_number.py  pricing.py  proposal.py  proposal_wizard.py  quote.py  realtor.py  (+6 more)
backend/app/services/: email.py  field_service.py  idempotency.py  notifications.py  push_notifications.py
backend/app/utils/: calendar.py  phone.py
backend/app/websockets/: connection_limits.py  voice_bridge.py  voice_test.py
backend/app/workers/: __init__.py  ad_library_discovery_worker.py  ad_monitor_worker.py  approval_worker.py  automation_worker.py  base.py  base_campaign_worker.py  campaign_worker.py  drip_campaign_worker.py  email_campaign_worker.py  enrichment_worker.py  experiment_evaluation_worker.py  followup_worker.py  message_test_worker.py  never_booked_worker.py  noshow_reengagement_worker.py  nudge_worker.py  outbound_auto_draft_worker.py  outbound_improvement_suggestion_worker.py  prompt_improvement_worker.py  prompt_stats_worker.py  prospect_enrichment_worker.py  prospect_promotion_worker.py  recurring_job_worker.py  reminder_worker.py  reputation_worker.py  retryable.py  runner.py  transcript_analysis_worker.py  voice_campaign_worker.py
backend/docs/: ad-library-compliance.md  ad-library-self-scrape.md  ad-library.md
backend/docs/migrations/: CHAIN_VERIFICATION.md
backend/scripts/: __init__.py  _harness.py  create_vertical_agent.py  export_openapi.py  seed_prestyj_batch_video_ads_offer.py  smoke_jobs_calendar.py
backend/scripts/backfills/: __init__.py  backfill_default_pipelines.py  backfill_lead_opportunities.py  backfill_prompt_stats.py  fix_contact_names.py
backend/scripts/demo/: DEMO_AGENT_README.md  __init__.py  create_demo_agent.py  create_jules_agent.py  enable_demo_embed.py  manage_demo_agent.sh  update-demo-agent.sh  (+5 more)
backend/tests/: conftest.py  factories.py  test_campaign_reply_classification.py  test_contact_ai_assignment_imessage.py  test_crm_assistant_automation_tools.py  test_crm_assistant_conversations.py  test_crm_assistant_domain_tools.py  test_crm_assistant_offer_tools.py  test_env_drift.py  test_main.py  test_outbound_growth_operator_happy_path.py  test_pagination.py  test_seed_prestyj_batch_video_ads_offer.py
(+1122 files in other folders)
