[project]
name = "aicrm-backend"
version = "0.1.0"
description = "AI-powered CRM backend with voice agents, SMS campaigns, and Cal.com integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI + ASGI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    # Redis
    "redis>=5.2.0",
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Authentication & Encryption
    "pyjwt[crypto]>=2.8.0",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.17",
    # HTTP Client
    "httpx>=0.28.0",
    # OpenAI
    "openai>=1.58.0",
    # Logging
    "structlog>=24.4.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "phonenumbers>=8.13.0",
    "resend>=2.0",
    "svix>=1.40",
    "beautifulsoup4>=4.14.3",
    # Audio resampling (anti-aliased sample rate conversion)
    "soxr>=0.5.0",
    # Statistics (bandit A/B testing)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # ML (TF-IDF similarity for IVR loop detection)
    "scikit-learn>=1.5.0",
    "cryptography>=46.0.4",
    "audioop-lts>=0.2.1 ; python_full_version >= '3.13'",
    "stripe>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PLR"]
ignore = ["PLR0913", "PLR2004", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "audioop_lts",
    "soxr",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-pytz>=2024.2",
]
