[project]
name = "aicrm-backend"
version = "0.1.0"
description = "AI-powered CRM backend with voice agents, SMS campaigns, and Cal.com integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI + ASGI
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "starlette>=0.40.0",
    # WebSocket client (Grok realtime, audio streaming)
    "websockets>=14.0",
    # YAML (scenario/config loaders)
    "pyyaml>=6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.30.0",
    "alembic>=1.18.4",
    "greenlet>=3.1.0",
    # Redis
    "redis>=7.4.0",
    # Validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.2.0",
    # Authentication & Encryption
    "pyjwt[crypto]>=2.8.0",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.28",
    # HTTP Client
    "httpx>=0.28.0",
    # OpenAI
    "openai>=2.36.0",
    # Logging
    "structlog>=24.4.0",
    # Utilities
    "phonenumbers>=8.13.0",
    "resend>=2.30.1",
    "svix>=1.93.0",
    "beautifulsoup4>=4.14.3",
    # Audio resampling (anti-aliased sample rate conversion)
    "soxr>=0.5.0",
    # Statistics (bandit A/B testing)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # ML (TF-IDF similarity for IVR loop detection)
    "scikit-learn>=1.5.0",
    "cryptography>=48.0.0",
    "audioop-lts>=0.2.1 ; python_full_version >= '3.13'",
    "stripe>=15.1.0",
    "sentry-sdk[fastapi]>=2.60.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "tenacity>=9.1.4",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
]

[project.scripts]
# Regenerate ``backend/openapi.json`` from the live FastAPI app. Run in CI
# followed by ``git diff --exit-code backend/openapi.json`` to catch unreviewed
# API contract changes.
export-openapi = "scripts.export_openapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PLR"]
ignore = ["PLR0913", "PLR2004", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "audioop_lts",
    "soxr",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: integration tests that hit real external services (skipped by default; run with -m integration)",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "types-pytz>=2026.2.0.20260506",
]
